<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_zvo"
        android:title="@string/nav_zvo">
        <menu>
            <item
                android:id="@+id/nav_zvo_view"
                android:title="@string/nav_zvo_view" />
            <item
                android:id="@+id/nav_zvo_rate"
                android:title="@string/nav_zvo_rate" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_spec"
        android:title="@string/nav_spec">
        <menu>
            <item
                android:id="@+id/nav_spec_view"
                android:title="@string/nav_spec_view" />
            <item
                android:id="@+id/nav_spec_rate"
                android:title="@string/nav_spec_rate" />
            <item
                android:id="@+id/nav_spec_select"
                android:title="@string/nav_spec_select" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_zno"
        android:title="@string/nav_zno">
        <menu>
            <item
                android:id="@+id/nav_zno_total_info"
                android:title="@string/nav_zno_total_info" />
            <item
                android:id="@+id/nav_zno_subj"
                android:title="@string/nav_zno_subj" />
            <item
                android:id="@+id/nav_zno_test"
                android:title="@string/nav_zno_test" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_exit"
        android:title="@string/nav_exit" />

</menu>
